scenarios/secure-baseline-multitenant/Bicep/main.Json
{
  "contentVersion": "1.0.0.0",
  "metadata": {
    "author": "Cloud Maker",
    "comments": "Generated with Cloud Maker. Try it yourself at https://cloudmaker.ai."
  },
  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
  "parameters": {
    "__cmLocation1": {
      "type": "string",
      "defaultValue": "West Europe"
    },
    "__cmLocation2": {
      "type": "string",
      "defaultValue": "[parameters('__cmLocation1')]"
    },
    "AppServiceName": {
      "type": "string"
    },
    "AzureFrontDoorResourceName": {
      "type": "string"
    },
    "AzureSqlLoginPassword": {
      "type": "secureString"
    },
    "FullyqualifiedARMdomainresourceURI": {
      "type": "string"
    },
    "hostNameOfTheDomain.MustBeADomainName.": {
      "type": "string"
    },
    "HubVNetName": {
      "type": "string"
    },
    "Nameofthedomainundertheprofilewhichisuniqueglobally": {
      "type": "string"
    },
    "SpokeVnetName": {
      "type": "string"
    },
    "SqlServerAdminAccountName": {
      "type": "string"
    }
  },
  "variables": {
    "appConfiguration1": "[concat(parameters('AppServiceName'), '-AppConfig')]",
    "applicationInsights1": "[concat(parameters('AppServiceName'), '-ApplicationInsight')]",
    "appServiceConfigRegionalVirtualNetworkIntegration1": "virtualNetwork",
    "bastion1": "[concat(parameters('HubVNetName'), '-Bastion')]",
    "cDNProfileFrontDoorEndpoint1": "[concat(parameters('AzureFrontDoorResourceName'), '-Endpoint')]",
    "cDNProfileFrontDoorEndpointsRoute1": "[concat(parameters('AzureFrontDoorResourceName'), '-route')]",
    "cDNProfileFrontDoorOriginGroup1": "afdorigingroup",
    "cDNProfileFrontDoorOriginGroupOrigin1": "afdorigingrouporigin",
    "containerRegistry1": "[concat(parameters('AppServiceName'), 'ContainerRegistry')]",
    "dDOSProtectionPlan1": "[concat(parameters('SpokeVnetName'), '-DDOSProtection')]",
    "keyVault1": "[concat(parameters('AppServiceName'), '-KeyVault')]",
    "networkFirewall1": "[concat(parameters('HubVNetName'), '-FireWall')]",
    "networkPrivateDnsZone1": "privatelink.azurewebsites.net",
    "networkPrivateDnsZoneVirtualNetworkLink1": "HubVnet",
    "networkPrivateDnsZoneVirtualNetworkLink2": "SpokeVnet",
    "networkPrivateEndpoint1": "[concat(parameters('SpokeVnetName'), '-ACPE')]",
    "networkPrivateEndpoint2": "[concat(parameters('SpokeVnetName'), '-SqlPE')]",
    "networkPrivateEndpoint3": "[concat(parameters('SpokeVnetName'), '-KVPE')]",
    "networkPrivateEndpoint4": "[concat(variables('subnet3'), '-AppServicePE')]",
    "networkPrivateEndpoint5": "[concat(parameters('SpokeVnetName'), '-CrPE')]",
    "networkSecurityGroup1": "[concat(variables('subnet1'), '-NSG')]",
    "networkSecurityGroup2": "[concat(variables('subnet2'), '-NSG')]",
    "networkSecurityGroup3": "[concat(variables('subnet3'), '-NSG')]",
    "networkSecurityGroup4": "[concat(variables('subnet4'), '-NSG')]",
    "networkSecurityGroup5": "[concat(variables('subnet5'), '-NSG')]",
    "networkVirtualNetworkVirtualNetworkPeering1": "HubPeering",
    "networkVirtualNetworkVirtualNetworkPeering2": "Spoke",
    "operationalInsightsWorkspace1": "[concat(parameters('AppServiceName'), '-LogAnalytics')]",
    "publicIpAddress1": "[concat(variables('subnet4'), '-PIP')]",
    "publicIpAddress2": "firewallPip",
    "publicIpAddress3": "firewallip",
    "redisCache1": "[concat(parameters('AppServiceName'), '-RedisCache')]",
    "resourceGroup1": "[concat(parameters('AppServiceName'), '-ResourceGroup')]",
    "sQLServer1": "[concat(parameters('AppServiceName'), '-SQL')]",
    "subnet1": "[concat(parameters('SpokeVnetName'), '-PrivateLinkSubnet')]",
    "subnet2": "[concat(parameters('SpokeVnetName'), '-AppServiceIntegrationVnet')]",
    "subnet3": "[concat(parameters('SpokeVnetName'), '-AFDSubnet')]",
    "subnet4": "AzureBastionSubnet",
    "subnet5": "[concat(parameters('SpokeVnetName'), '-VmssSubnet')]",
    "subnet6": "[concat(parameters('HubVNetName'), '-FwSubnet')]",
    "webServerfarm1": "[concat(parameters('AppServiceName'), '-AppServicePlan')]",
    "webSiteHostnameBinding1": "hostnamebinding"
  },
  "resources": [
    {
      "apiVersion": "2019-09-01",
      "type": "Microsoft.KeyVault/vaults",
      "comments": "Property reference: https://docs.microsoft.com/en-us/azure/templates/Microsoft.KeyVault/2019-09-01/vaults",
      "name": "[variables('keyVault1')]",
      "location": "[parameters('__cmLocation2')]",
      "properties": {
        "accessPolicies": [],
        "enabledForDeployment": false,
        "enabledForDiskEncryption": false,
        "enabledForTemplateDeployment": false,
        "enableSoftDelete": true,
        "sku": {
          "family": "A",
          "name": "standard"
        },
        "tenantId": "[subscription().tenantId]"
      }
    },
    {
      "apiVersion": "2019-10-01",
      "type": "Microsoft.AppConfiguration/configurationStores",
      "comments": "Property reference: https://docs.microsoft.com/en-us/azure/templates/Microsoft.AppConfiguration/2019-10-01/configurationStores",
      "name": "[variables('appConfiguration1')]",
      "location": "[parameters('__cmLocation2')]",
      "properties": {},
      "sku": {
        "name": "Standard"
      }
    },
    {
      "apiVersion": "2015-11-01-preview",
      "type": "Microsoft.OperationalInsights/workspaces",
      "comments": "Property reference: https://docs.microsoft.com/en-us/azure/templates/Microsoft.OperationalInsights/2015-11-01-preview/workspaces",
      "name": "[variables('operationalInsightsWorkspace1')]",
      "location": "[parameters('__cmLocation2')]",
      "properties": {
        "sku": {
          "name": "PerGB2018"
        }
      }
    },
    {
      "apiVersion": "2017-10-01",
      "type": "Microsoft.Cache/Redis",
      "comments": "Property reference: https://docs.microsoft.com/en-us/azure/templates/Microsoft.Cache/2017-10-01/Redis",
      "name": "[variables('redisCache1')]",
      "location": "[parameters('__cmLocation2')]",
      "properties": {
        "sku": {
          "capacity": 0,
          "family": "C",
          "name": "Basic"
        }
      }
    },
    {
      "apiVersion": "2015-05-01",
      "type": "Microsoft.Insights/components",
      "comments": "Property reference: https://docs.microsoft.com/en-us/azure/templates/Microsoft.Insights/2015-05-01/components",
      "name": "[variables('applicationInsights1')]",
      "location": "[parameters('__cmLocation2')]",
      "kind": "web",
      "properties": {
        "Application_Type": "web",
        "Request_Source": "rest"
      }
    },
    {
      "apiVersion": "2018-09-01",
      "type": "Microsoft.Network/privateDnsZones",
      "comments": "Property reference: https://docs.microsoft.com/en-us/azure/templates/Microsoft.Network/2018-09-01/privateDnsZones",
      "name": "[variables('networkPrivateDnsZone1')]",
      "location": "global"
    },
    {
      "apiVersion": "2020-08-01",
      "type": "Microsoft.Network/ddosProtectionPlans",
      "comments": "Property reference: https://docs.microsoft.com/en-us/azure/templates/Microsoft.Network/2020-08-01/ddosProtectionPlans",
      "name": "[variables('dDOSProtectionPlan1')]",
      "location": "[parameters('__cmLocation2')]",
      "properties": {}
    },
    {
      "apiVersion": "2020-08-01",
      "type": "Microsoft.Network/networkSecurityGroups",
      "comments": "Property reference: https://docs.microsoft.com/en-us/azure/templates/Microsoft.Network/2020-08-01/networkSecurityGroups",
      "name": "[variables('networkSecurityGroup1')]",
      "location": "[parameters('__cmLocation2')]",
      "properties": {
        "securityRules": []
      }
    },
    {
      "apiVersion": "2020-08-01",
      "type": "Microsoft.Network/networkSecurityGroups",
      "comments": "Property reference: https://docs.microsoft.com/en-us/azure/templates/Microsoft.Network/2020-08-01/networkSecurityGroups",
      "name": "[variables('networkSecurityGroup2')]",
      "location": "[parameters('__cmLocation2')]",
      "properties": {
        "securityRules": []
      }
    },
    {
      "apiVersion": "2020-08-01",
      "type": "Microsoft.Network/networkSecurityGroups",
      "comments": "Property reference: https://docs.microsoft.com/en-us/azure/templates/Microsoft.Network/2020-08-01/networkSecurityGroups",
      "name": "[variables('networkSecurityGroup3')]",
      "location": "[parameters('__cmLocation2')]",
      "properties": {
        "securityRules": []
      }
    },
    {
      "apiVersion": "2019-06-01-preview",
      "type": "Microsoft.Sql/servers",
      "comments": "Property reference: https://docs.microsoft.com/en-us/azure/templates/Microsoft.Sql/2019-06-01-preview/servers",
      "name": "[variables('sQLServer1')]",
      "location": "[parameters('__cmLocation2')]",
      "properties": {
        "administratorLogin": "[parameters('SqlServerAdminAccountName')]",
        "administratorLoginPassword": "[parameters('AzureSqlLoginPassword')]"
      }
    },
    {
      "apiVersion": "2021-09-01",
      "type": "Microsoft.ContainerRegistry/registries",
      "comments": "Property reference: https://docs.microsoft.com/en-us/azure/templates/Microsoft.ContainerRegistry/2021-09-01/registries",
      "name": "[variables('containerRegistry1')]",
      "location": "[parameters('__cmLocation2')]",
      "properties": {
        "adminUserEnabled": false
      },
      "sku": {
        "name": "Premium"
      }
    },
    {
      "apiVersion": "2020-08-01",
      "type": "Microsoft.Network/networkSecurityGroups",
      "comments": "Property reference: https://docs.microsoft.com/en-us/azure/templates/Microsoft.Network/2020-08-01/networkSecurityGroups",
      "name": "[variables('networkSecurityGroup4')]",
      "location": "[parameters('__cmLocation2')]",
      "properties": {
        "securityRules": [
          {
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "443",
              "sourceAddressPrefix": "Internet",
              "sourceAddressPrefixes": [],
              "destinationAddressPrefix": "*",
              "destinationAddressPrefixes": [],
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "access": "Allow",
              "priority": 120,
              "direction": "Inbound"
            },
            "name": "AllowHttpsInBound"
          },
          {
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "443",
              "sourceAddressPrefix": "GatewayManager",
              "sourceAddressPrefixes": [],
              "destinationAddressPrefix": "*",
              "destinationAddressPrefixes": [],
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "access": "Allow",
              "priority": 130,
              "direction": "Inbound"
            },
            "name": "AllowGatewayManagerInbound"
          },
          {
            "properties": {
              "protocol": "*",
              "sourcePortRange": "*",
              "sourceAddressPrefix": "VirtualNetwork",
              "sourceAddressPrefixes": [],
              "destinationAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefixes": [],
              "sourcePortRanges": [],
              "destinationPortRanges": [
                "8080",
                "5701"
              ],
              "access": "Allow",
              "priority": 150,
              "direction": "Inbound"
            },
            "name": "AllowBastionHostCommunicationInBound"
          },
          {
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "443",
              "sourceAddressPrefix": "AzureLoadBalancer",
              "sourceAddressPrefixes": [],
              "destinationAddressPrefix": "*",
              "destinationAddressPrefixes": [],
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "access": "Allow",
              "priority": 140,
              "direction": "Inbound"
            },
            "name": "AllowLoadBalancerInBound"
          },
          {
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "sourceAddressPrefix": "*",
              "sourceAddressPrefixes": [],
              "destinationAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefixes": [],
              "sourcePortRanges": [],
              "destinationPortRanges": [
                "22",
                "3389"
              ],
              "access": "Allow",
              "priority": 100,
              "direction": "Outbound"
            },
            "name": "AllowSshRdpOutBound"
          },
          {
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "443",
              "sourceAddressPrefix": "*",
              "sourceAddressPrefixes": [],
              "destinationAddressPrefix": "AzureCloud",
              "destinationAddressPrefixes": [],
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "access": "Allow",
              "priority": 110,
              "direction": "Outbound"
            },
            "name": "AllowAzureCloudCommunicationOutBound"
          },
          {
            "properties": {
              "protocol": "*",
              "sourcePortRange": "*",
              "sourceAddressPrefix": "VirtualNetwork",
              "sourceAddressPrefixes": [],
              "destinationAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefixes": [],
              "sourcePortRanges": [],
              "destinationPortRanges": [
                "8080",
                "5701"
              ],
              "access": "Allow",
              "priority": 120,
              "direction": "Outbound"
            },
            "name": "AllowBastionHostCommunicationOutBound"
          },
          {
            "properties": {
              "protocol": "*",
              "sourcePortRange": "*",
              "sourceAddressPrefix": "*",
              "sourceAddressPrefixes": [],
              "destinationAddressPrefix": "Internet",
              "destinationAddressPrefixes": [],
              "sourcePortRanges": [],
              "destinationPortRanges": [
                "80",
                "443"
              ],
              "access": "Allow",
              "priority": 130,
              "direction": "Outbound"
            },
            "name": "AllowGetSessionInformationOutBound"
          }
        ]
      }
    },
    {
      "apiVersion": "2020-08-01",
      "type": "Microsoft.Network/publicIPAddresses",
      "comments": "Property reference: https://docs.microsoft.com/en-us/azure/templates/Microsoft.Network/2020-08-01/publicIPAddresses",
      "name": "[variables('publicIpAddress1')]",
      "location": "[parameters('__cmLocation2')]",
      "sku": {
        "name": "Standard"
      },
      "properties": {
        "publicIPAllocationMethod": "Static",
        "ipTags": []
      },
      "zones": []
    },
    {
      "apiVersion": "2020-08-01",
      "type": "Microsoft.Network/networkSecurityGroups",
      "comments": "Property reference: https://docs.microsoft.com/en-us/azure/templates/Microsoft.Network/2020-08-01/networkSecurityGroups",
      "name": "[variables('networkSecurityGroup5')]",
      "location": "[parameters('__cmLocation2')]",
      "properties": {
        "securityRules": []
      }
    },
    {
      "apiVersion": "2020-12-01",
      "type": "Microsoft.Web/serverfarms",
      "comments": "Property reference: https://docs.microsoft.com/en-us/azure/templates/Microsoft.Web/2020-12-01/serverfarms",
      "name": "[variables('webServerfarm1')]",
      "location": "[parameters('__cmLocation2')]",
      "properties": {
        "targetWorkerCount": 1,
        "targetWorkerSizeId": 1
      },
      "sku": {
        "capacity": 1,
        "name": "S2"
      }
    },
    {
      "apiVersion": "2020-12-01",
      "type": "Microsoft.Web/sites",
      "comments": "Property reference: https://docs.microsoft.com/en-us/azure/templates/Microsoft.Web/2020-12-01/sites",
      "name": "[parameters('AppServiceName')]",
      "identity": {
        "type": "SystemAssigned"
      },
      "kind": "app",
      "location": "[parameters('__cmLocation2')]",
      "properties": {
        "clientAffinityEnabled": false,
        "httpsOnly": true,
        "serverFarmId": "[resourceId( 'Microsoft.Web/serverfarms', variables('webServerfarm1'))]",
        "siteConfig": {
          "alwaysOn": true,
          "appSettings": [
            {
              "name": "APPINSIGHTS_INSTRUMENTATIONKEY",
              "value": "[reference(resourceId( 'Microsoft.Insights/components', variables('applicationInsights1')), '2015-05-01', 'Full').properties.InstrumentationKey]"
            }
          ],
          "connectionStrings": [],
          "defaultDocuments": [],
          "handlerMappings": [],
          "httpLoggingEnabled": false,
          "ipSecurityRestrictions": [],
          "minTlsVersion": "1.2",
          "remoteDebuggingEnabled": false,
          "scmIpSecurityRestrictions": [],
          "vnetRouteAllEnabled": true,
          "webSocketsEnabled": false
        }
      },
      "dependsOn": [
        "[resourceId( 'Microsoft.Web/serverfarms', variables('webServerfarm1'))]",
        "[resourceId( 'Microsoft.Insights/components', variables('applicationInsights1'))]"
      ]
    },
    {
      "apiVersion": "2021-06-01",
      "type": "Microsoft.Cdn/profiles",
      "comments": "Property reference: https://docs.microsoft.com/en-us/azure/templates/Microsoft.Cdn/2021-06-01/profiles",
      "name": "[parameters('AzureFrontDoorResourceName')]",
      "location": "global",
      "properties": {
        "originResponseTimeoutSeconds": 70
      },
      "sku": {
        "name": "Premium_AzureFrontDoor"
      }
    },
    {
      "apiVersion": "2020-08-01",
      "type": "Microsoft.Network/publicIPAddresses",
      "comments": "Property reference: https://docs.microsoft.com/en-us/azure/templates/Microsoft.Network/2020-08-01/publicIPAddresses",
      "name": "[variables('publicIpAddress2')]",
      "sku": {
        "name": "Standard",
        "tier": "Regional"
      },
      "properties": {
        "publicIPAllocationMethod": "Static",
        "ipTags": []
      },
      "zones": []
    },
    {
      "apiVersion": "2020-08-01",
      "type": "Microsoft.Network/publicIPAddresses",
      "comments": "Property reference: https://docs.microsoft.com/en-us/azure/templates/Microsoft.Network/2020-08-01/publicIPAddresses",
      "name": "[variables('publicIpAddress3')]",
      "sku": {
        "name": "Standard",
        "tier": "Regional"
      },
      "properties": {
        "publicIPAllocationMethod": "Static",
        "ipTags": []
      },
      "zones": []
    },
    {
      "apiVersion": "2020-08-01",
      "type": "Microsoft.Network/virtualNetworks",
      "comments": "Property reference: https://docs.microsoft.com/en-us/azure/templates/Microsoft.Network/2020-08-01/virtualNetworks",
      "name": "[parameters('SpokeVnetName')]",
      "location": "[parameters('__cmLocation2')]",
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "10.240.0.0/20"
          ]
        },
        "subnets": [
          {
            "name": "[variables('subnet1')]",
            "properties": {
              "addressPrefix": "10.240.11.0/24",
              "networkSecurityGroup": {
                "id": "[resourceId( 'Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroup1'))]"
              },
              "serviceEndpoints": [],
              "serviceEndpointPolicies": [],
              "delegations": []
            }
          },
          {
            "name": "[variables('subnet2')]",
            "properties": {
              "addressPrefix": "10.240.0.0/26",
              "networkSecurityGroup": {
                "id": "[resourceId( 'Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroup2'))]"
              },
              "serviceEndpoints": [],
              "serviceEndpointPolicies": [],
              "delegations": [
                {
                  "properties": {
                    "serviceName": "Microsoft.Web/serverFarms"
                  },
                  "name": "appservicedelegation"
                }
              ]
            }
          },
          {
            "name": "[variables('subnet3')]",
            "properties": {
              "addressPrefix": "10.240.0.64/26",
              "networkSecurityGroup": {
                "id": "[resourceId( 'Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroup3'))]"
              },
              "serviceEndpoints": [],
              "serviceEndpointPolicies": [],
              "delegations": []
            }
          },
          {
            "name": "[variables('subnet5')]",
            "properties": {
              "addressPrefix": "10.240.10.128/26",
              "networkSecurityGroup": {
                "id": "[resourceId( 'Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroup5'))]"
              },
              "serviceEndpoints": [],
              "serviceEndpointPolicies": [],
              "delegations": []
            }
          }
        ],
        "enableDdosProtection": true,
        "ddosProtectionPlan": {
          "id": "[resourceId( 'Microsoft.Network/ddosProtectionPlans', variables('dDOSProtectionPlan1'))]"
        }
      },
      "dependsOn": [
        "[resourceId( 'Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroup1'))]",
        "[resourceId( 'Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroup2'))]",
        "[resourceId( 'Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroup3'))]",
        "[resourceId( 'Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroup5'))]",
        "[resourceId( 'Microsoft.Network/ddosProtectionPlans', variables('dDOSProtectionPlan1'))]"
      ]
    },
    {
      "apiVersion": "2020-11-01",
      "type": "Microsoft.Network/privateEndpoints",
      "comments": "Property reference: https://docs.microsoft.com/en-us/azure/templates/Microsoft.Network/2020-11-01/privateEndpoints",
      "name": "[variables('networkPrivateEndpoint1')]",
      "location": "[parameters('__cmLocation2')]",
      "properties": {
        "subnet": {
          "id": "[resourceId( 'Microsoft.Network/virtualNetworks/subnets', parameters('SpokeVnetName'), variables('subnet1'))]"
        },
        "privateLinkServiceConnections": [
          {
            "properties": {
              "privateLinkServiceId": "[resourceId( 'Microsoft.AppConfiguration/configurationStores', variables('appConfiguration1'))]",
              "groupIds": [
                "configurationStores"
              ]
            },
            "name": "PrivateLinkService"
          }
        ]
      },
      "dependsOn": [
        "[resourceId( 'Microsoft.Network/virtualNetworks', parameters('SpokeVnetName'))]",
        "[resourceId( 'Microsoft.AppConfiguration/configurationStores', variables('appConfiguration1'))]"
      ]
    },
    {
      "apiVersion": "2020-11-01",
      "type": "Microsoft.Network/privateEndpoints",
      "comments": "Property reference: https://docs.microsoft.com/en-us/azure/templates/Microsoft.Network/2020-11-01/privateEndpoints",
      "name": "[variables('networkPrivateEndpoint2')]",
      "location": "[parameters('__cmLocation2')]",
      "properties": {
        "subnet": {
          "id": "[resourceId( 'Microsoft.Network/virtualNetworks/subnets', parameters('SpokeVnetName'), variables('subnet1'))]"
        },
        "privateLinkServiceConnections": [
          {
            "properties": {
              "privateLinkServiceId": "[resourceId( 'Microsoft.Sql/servers', variables('sQLServer1'))]",
              "groupIds": [
                "sqlServer"
              ]
            },
            "name": "PrivateLinkService"
          }
        ]
      },
      "dependsOn": [
        "[resourceId( 'Microsoft.Network/virtualNetworks', parameters('SpokeVnetName'))]",
        "[resourceId( 'Microsoft.Sql/servers', variables('sQLServer1'))]"
      ]
    },
    {
      "apiVersion": "2020-11-01",
      "type": "Microsoft.Network/privateEndpoints",
      "comments": "Property reference: https://docs.microsoft.com/en-us/azure/templates/Microsoft.Network/2020-11-01/privateEndpoints",
      "name": "[variables('networkPrivateEndpoint3')]",
      "location": "[parameters('__cmLocation2')]",
      "properties": {
        "subnet": {
          "id": "[resourceId( 'Microsoft.Network/virtualNetworks/subnets', parameters('SpokeVnetName'), variables('subnet1'))]"
        },
        "privateLinkServiceConnections": [
          {
            "properties": {
              "privateLinkServiceId": "[resourceId( 'Microsoft.KeyVault/vaults', variables('keyVault1'))]",
              "groupIds": [
                "vault"
              ]
            },
            "name": "PrivateLinkService"
          }
        ]
      },
      "dependsOn": [
        "[resourceId( 'Microsoft.Network/virtualNetworks', parameters('SpokeVnetName'))]",
        "[resourceId( 'Microsoft.KeyVault/vaults', variables('keyVault1'))]"
      ]
    },
    {
      "apiVersion": "2020-11-01",
      "type": "Microsoft.Network/privateEndpoints",
      "comments": "Property reference: https://docs.microsoft.com/en-us/azure/templates/Microsoft.Network/2020-11-01/privateEndpoints",
      "name": "[variables('networkPrivateEndpoint4')]",
      "location": "[parameters('__cmLocation2')]",
      "properties": {
        "subnet": {
          "id": "[resourceId( 'Microsoft.Network/virtualNetworks/subnets', parameters('SpokeVnetName'), variables('subnet3'))]"
        },
        "privateLinkServiceConnections": [
          {
            "properties": {
              "privateLinkServiceId": "[resourceId( 'Microsoft.Web/sites', parameters('AppServiceName'))]",
              "groupIds": [
                "sites"
              ]
            },
            "name": "PrivateLinkService"
          }
        ]
      },
      "dependsOn": [
        "[resourceId( 'Microsoft.Network/virtualNetworks', parameters('SpokeVnetName'))]",
        "[resourceId( 'Microsoft.Web/sites', parameters('AppServiceName'))]"
      ]
    },
    {
      "apiVersion": "2020-11-01",
      "type": "Microsoft.Network/privateEndpoints",
      "comments": "Property reference: https://docs.microsoft.com/en-us/azure/templates/Microsoft.Network/2020-11-01/privateEndpoints",
      "name": "[variables('networkPrivateEndpoint5')]",
      "location": "[parameters('__cmLocation2')]",
      "properties": {
        "subnet": {
          "id": "[resourceId( 'Microsoft.Network/virtualNetworks/subnets', parameters('SpokeVnetName'), variables('subnet1'))]"
        },
        "privateLinkServiceConnections": [
          {
            "properties": {
              "privateLinkServiceId": "[resourceId( 'Microsoft.ContainerRegistry/registries', variables('containerRegistry1'))]",
              "groupIds": [
                "registry"
              ]
            },
            "name": "PrivateLinkService"
          }
        ]
      },
      "dependsOn": [
        "[resourceId( 'Microsoft.Network/virtualNetworks', parameters('SpokeVnetName'))]",
        "[resourceId( 'Microsoft.ContainerRegistry/registries', variables('containerRegistry1'))]"
      ]
    },
    {
      "apiVersion": "2020-08-01",
      "type": "Microsoft.Network/virtualNetworks",
      "comments": "Property reference: https://docs.microsoft.com/en-us/azure/templates/Microsoft.Network/2020-08-01/virtualNetworks",
      "name": "[parameters('HubVNetName')]",
      "location": "[parameters('__cmLocation2')]",
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "10.242.0.0/20"
          ]
        },
        "subnets": [
          {
            "name": "[variables('subnet4')]",
            "properties": {
              "addressPrefix": "10.242.0.64/26",
              "networkSecurityGroup": {
                "id": "[resourceId( 'Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroup4'))]"
              },
              "serviceEndpoints": [],
              "serviceEndpointPolicies": [],
              "delegations": []
            }
          },
          {
            "name": "[variables('subnet6')]",
            "properties": {
              "addressPrefix": "10.242.0.0/26",
              "serviceEndpoints": [],
              "serviceEndpointPolicies": [],
              "delegations": []
            }
          }
        ],
        "enableDdosProtection": false
      },
      "dependsOn": [
        "[resourceId( 'Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroup4'))]"
      ]
    },
    {
      "apiVersion": "2021-05-01",
      "type": "Microsoft.Network/bastionHosts",
      "comments": "Property reference: https://docs.microsoft.com/en-us/azure/templates/Microsoft.Network/2021-05-01/bastionHosts",
      "name": "[variables('bastion1')]",
      "location": "[parameters('__cmLocation2')]",
      "properties": {
        "ipConfigurations": [
          {
            "name": "ipConfig",
            "properties": {
              "privateIPAllocationMethod": "Dynamic",
              "subnet": {
                "id": "[resourceId( 'Microsoft.Network/virtualNetworks/subnets', parameters('HubVNetName'), variables('subnet4'))]"
              },
              "publicIPAddress": {
                "id": "[resourceId( 'Microsoft.Network/publicIPAddresses', variables('publicIpAddress1'))]"
              }
            }
          }
        ],
        "scaleUnits": 2
      },
      "dependsOn": [
        "[resourceId( 'Microsoft.Network/virtualNetworks', parameters('HubVNetName'))]",
        "[resourceId( 'Microsoft.Network/publicIPAddresses', variables('publicIpAddress1'))]"
      ]
    },
    {
      "apiVersion": "2020-12-01",
      "type": "Microsoft.Web/sites/hostNameBindings",
      "comments": "Property reference: https://docs.microsoft.com/en-us/azure/templates/Microsoft.Web/2020-12-01/sites",
      "name": "[concat(parameters('AppServiceName'), '/', variables('webSiteHostnameBinding1'))]",
      "properties": {
        "customHostNameDnsRecordType": "A",
        "domainId": "[parameters('FullyqualifiedARMdomainresourceURI')]",
        "sslState": "Disabled"
      },
      "dependsOn": [
        "[resourceId( 'Microsoft.Web/sites', parameters('AppServiceName'))]"
      ]
    },
    {
      "apiVersion": "2018-11-01",
      "type": "Microsoft.Web/sites/config",
      "comments": "Property reference: https://docs.microsoft.com/en-us/azure/templates/Microsoft.Web/2018-11-01/sites",
      "name": "[concat(parameters('AppServiceName'), '/', variables('appServiceConfigRegionalVirtualNetworkIntegration1'))]",
      "properties": {
        "subnetResourceId": "[resourceId( 'Microsoft.Network/virtualNetworks/subnets', parameters('SpokeVnetName'), variables('subnet2'))]"
      },
      "dependsOn": [
        "[resourceId( 'Microsoft.Network/virtualNetworks', parameters('SpokeVnetName'))]",
        "[resourceId( 'Microsoft.Web/sites', parameters('AppServiceName'))]"
      ]
    },
    {
      "apiVersion": "2021-06-01",
      "type": "Microsoft.Cdn/profiles/customDomains",
      "comments": "Property reference: https://docs.microsoft.com/en-us/azure/templates/Microsoft.Cdn/2021-06-01/profiles",
      "name": "[concat(parameters('AzureFrontDoorResourceName'), '/', parameters('Nameofthedomainundertheprofilewhichisuniqueglobally'))]",
      "properties": {
        "hostName": "[parameters('hostNameOfTheDomain.MustBeADomainName.')]",
        "tlsSettings": {
          "certificateType": "ManagedCertificate",
          "minimumTlsVersion": "TLS12"
        }
      },
      "dependsOn": [
        "[resourceId( 'Microsoft.Cdn/profiles', parameters('AzureFrontDoorResourceName'))]"
      ]
    },
    {
      "apiVersion": "2021-06-01",
      "type": "Microsoft.Cdn/profiles/afdEndpoints",
      "comments": "Property reference: https://docs.microsoft.com/en-us/azure/templates/Microsoft.Cdn/2021-06-01/profiles",
      "name": "[concat(parameters('AzureFrontDoorResourceName'), '/', variables('cDNProfileFrontDoorEndpoint1'))]",
      "location": "global",
      "properties": {
        "autoGeneratedDomainNameLabelScope": "TenantReuse",
        "enabledState": "Enabled"
      },
      "dependsOn": [
        "[resourceId( 'Microsoft.Cdn/profiles', parameters('AzureFrontDoorResourceName'))]"
      ]
    },
    {
      "apiVersion": "2021-06-01",
      "type": "Microsoft.Cdn/profiles/originGroups",
      "comments": "Property reference: https://docs.microsoft.com/en-us/azure/templates/Microsoft.Cdn/2021-06-01/profiles",
      "name": "[concat(parameters('AzureFrontDoorResourceName'), '/', variables('cDNProfileFrontDoorOriginGroup1'))]",
      "properties": {
        "loadBalancingSettings": {
          "additionalLatencyInMilliseconds": 1000,
          "sampleSize": 100,
          "successfulSamplesRequired": 50
        },
        "sessionAffinityState": "Disabled"
      },
      "dependsOn": [
        "[resourceId( 'Microsoft.Cdn/profiles', parameters('AzureFrontDoorResourceName'))]"
      ]
    },
    {
      "apiVersion": "2022-01-01",
      "type": "Microsoft.Network/azureFirewalls",
      "comments": "Property reference: https://docs.microsoft.com/en-us/azure/templates/Microsoft.Network/2022-01-01/azureFirewalls",
      "name": "[variables('networkFirewall1')]",
      "properties": {
        "ipConfigurations": [
          {
            "name": "default",
            "properties": {
              "publicIPAddress": {
                "id": "[resourceId( 'Microsoft.Network/publicIPAddresses', variables('publicIpAddress2'))]"
              },
              "subnet": {
                "id": "[resourceId( 'Microsoft.Network/virtualNetworks/subnets', parameters('HubVNetName'), variables('subnet6'))]"
              }
            }
          }
        ],
        "managementIpConfiguration": {
          "name": "firewallpip",
          "properties": {
            "publicIPAddress": {
              "id": "[resourceId( 'Microsoft.Network/publicIPAddresses', variables('publicIpAddress3'))]"
            },
            "subnet": {
              "id": "[resourceId( 'Microsoft.Network/virtualNetworks/subnets', parameters('HubVNetName'), variables('subnet6'))]"
            }
          }
        },
        "sku": {
          "name": "AZFW_Hub",
          "tier": "Standard"
        },
        "threatIntelMode": "Alert"
      },
      "zones": [],
      "dependsOn": [
        "[resourceId( 'Microsoft.Network/publicIPAddresses', variables('publicIpAddress2'))]",
        "[resourceId( 'Microsoft.Network/virtualNetworks', parameters('HubVNetName'))]",
        "[resourceId( 'Microsoft.Network/publicIPAddresses', variables('publicIpAddress3'))]"
      ]
    },
    {
      "apiVersion": "2020-08-01",
      "type": "Microsoft.Network/virtualNetworks/virtualNetworkPeerings",
      "comments": "Property reference: https://docs.microsoft.com/en-us/azure/templates/Microsoft.Network/2020-08-01/virtualNetworks",
      "name": "[concat(parameters('SpokeVnetName'), '/', variables('networkVirtualNetworkVirtualNetworkPeering1'))]",
      "properties": {
        "allowVirtualNetworkAccess": true,
        "allowForwardedTraffic": false,
        "allowGatewayTransit": false,
        "useRemoteGateways": false,
        "remoteVirtualNetwork": {
          "id": "[resourceId( 'Microsoft.Network/virtualNetworks', parameters('HubVNetName'))]"
        }
      },
      "dependsOn": [
        "[resourceId( 'Microsoft.Network/virtualNetworks', parameters('HubVNetName'))]",
        "[resourceId( 'Microsoft.Network/virtualNetworks', parameters('SpokeVnetName'))]"
      ]
    },
    {
      "apiVersion": "2020-08-01",
      "type": "Microsoft.Network/virtualNetworks/virtualNetworkPeerings",
      "comments": "Property reference: https://docs.microsoft.com/en-us/azure/templates/Microsoft.Network/2020-08-01/virtualNetworks",
      "name": "[concat(parameters('HubVNetName'), '/', variables('networkVirtualNetworkVirtualNetworkPeering2'))]",
      "properties": {
        "allowVirtualNetworkAccess": true,
        "allowForwardedTraffic": false,
        "allowGatewayTransit": false,
        "useRemoteGateways": false,
        "remoteVirtualNetwork": {
          "id": "[resourceId( 'Microsoft.Network/virtualNetworks', parameters('SpokeVnetName'))]"
        }
      },
      "dependsOn": [
        "[resourceId( 'Microsoft.Network/virtualNetworks', parameters('SpokeVnetName'))]",
        "[resourceId( 'Microsoft.Network/virtualNetworks', parameters('HubVNetName'))]"
      ]
    },
    {
      "apiVersion": "2021-06-01",
      "type": "Microsoft.Cdn/profiles/afdEndpoints/routes",
      "comments": "Property reference: https://docs.microsoft.com/en-us/azure/templates/Microsoft.Cdn/2021-06-01/profiles",
      "name": "[concat(parameters('AzureFrontDoorResourceName'), '/', variables('cDNProfileFrontDoorEndpoint1'), '/', variables('cDNProfileFrontDoorEndpointsRoute1'))]",
      "properties": {
        "customDomains": [
          {
            "id": "[resourceId( 'Microsoft.Cdn/profiles/customDomains', parameters('AzureFrontDoorResourceName'), parameters('Nameofthedomainundertheprofilewhichisuniqueglobally'))]"
          }
        ],
        "enabledState": "Enabled",
        "forwardingProtocol": "HttpsOnly",
        "httpsRedirect": "Enabled",
        "linkToDefaultDomain": "Enabled",
        "originGroup": {
          "id": "[resourceId( 'Microsoft.Cdn/profiles/originGroups', parameters('AzureFrontDoorResourceName'), variables('cDNProfileFrontDoorOriginGroup1'))]"
        },
        "patternsToMatch": [
          "/*"
        ],
        "ruleSets": [],
        "supportedProtocols": [
          "Http"
        ]
      },
      "dependsOn": [
        "[resourceId( 'Microsoft.Cdn/profiles/customDomains', parameters('AzureFrontDoorResourceName'), parameters('Nameofthedomainundertheprofilewhichisuniqueglobally'))]",
        "[resourceId( 'Microsoft.Cdn/profiles/originGroups', parameters('AzureFrontDoorResourceName'), variables('cDNProfileFrontDoorOriginGroup1'))]",
        "[resourceId( 'Microsoft.Cdn/profiles/afdEndpoints', parameters('AzureFrontDoorResourceName'), variables('cDNProfileFrontDoorEndpoint1'))]"
      ]
    },
    {
      "apiVersion": "2021-06-01",
      "type": "Microsoft.Cdn/profiles/originGroups/origins",
      "comments": "Property reference: https://docs.microsoft.com/en-us/azure/templates/Microsoft.Cdn/2021-06-01/profiles",
      "name": "[concat(parameters('AzureFrontDoorResourceName'), '/', variables('cDNProfileFrontDoorOriginGroup1'), '/', variables('cDNProfileFrontDoorOriginGroupOrigin1'))]",
      "properties": {
        "enabledState": "Enabled",
        "hostName": "[variables('webSiteHostnameBinding1')]",
        "httpPort": 80,
        "sharedPrivateLinkResource": {
          "groupId": "sites",
          "privateLink": "[resourceId( 'Microsoft.Web/sites', parameters('AppServiceName'))]"
        }
      },
      "dependsOn": [
        "[resourceId( 'Microsoft.Web/sites', parameters('AppServiceName'))]",
        "[resourceId( 'Microsoft.Cdn/profiles/originGroups', parameters('AzureFrontDoorResourceName'), variables('cDNProfileFrontDoorOriginGroup1'))]"
      ]
    },
    {
      "apiVersion": "2018-09-01",
      "type": "Microsoft.Network/privateDnsZones/virtualNetworkLinks",
      "comments": "Property reference: https://docs.microsoft.com/en-us/azure/templates/Microsoft.Network/2018-09-01/privateDnsZones",
      "name": "[concat(variables('networkPrivateDnsZone1'), '/', variables('networkPrivateDnsZoneVirtualNetworkLink1'))]",
      "properties": {
        "virtualNetwork": {
          "id": "[resourceId( 'Microsoft.Network/virtualNetworks', parameters('HubVNetName'))]"
        },
        "registrationEnabled": true
      },
      "location": "global",
      "dependsOn": [
        "[resourceId( 'Microsoft.Network/virtualNetworks', parameters('HubVNetName'))]",
        "[resourceId( 'Microsoft.Network/virtualNetworks/virtualNetworkPeerings', parameters('HubVNetName'), variables('networkVirtualNetworkVirtualNetworkPeering2'))]",
        "[resourceId( 'Microsoft.Network/privateDnsZones', variables('networkPrivateDnsZone1'))]"
      ]
    },
    {
      "apiVersion": "2018-09-01",
      "type": "Microsoft.Network/privateDnsZones/virtualNetworkLinks",
      "comments": "Property reference: https://docs.microsoft.com/en-us/azure/templates/Microsoft.Network/2018-09-01/privateDnsZones",
      "name": "[concat(variables('networkPrivateDnsZone1'), '/', variables('networkPrivateDnsZoneVirtualNetworkLink2'))]",
      "properties": {
        "virtualNetwork": {
          "id": "[resourceId( 'Microsoft.Network/virtualNetworks', parameters('SpokeVnetName'))]"
        },
        "registrationEnabled": true
      },
      "location": "global",
      "dependsOn": [
        "[resourceId( 'Microsoft.Network/virtualNetworks', parameters('SpokeVnetName'))]",
        "[resourceId( 'Microsoft.Network/virtualNetworks/virtualNetworkPeerings', parameters('SpokeVnetName'), variables('networkVirtualNetworkVirtualNetworkPeering1'))]",
        "[resourceId( 'Microsoft.Network/privateDnsZones', variables('networkPrivateDnsZone1'))]"
      ]
    }
  ],
  "outputs": {}
}
